tests/diagnostics/snapshots/test_indented.txt
Error: Can't compare apples with oranges (at <unknown>:3:64)
  | 
1 |     super_apple := apple ** 2
2 |         lemon := orange - apple
3 |             apple == orange
  |                   ^^ Comparison attempted here